DesiNZC/objects/Company_Metrics__c.object
<CustomObject>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <label>Annual Revenue (Millions)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_Headcount__c</fullName>
        <label>Employee Headcount</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Internal_Cost_of_Carbon__c</fullName>
        <label>Internal Cost of Carbon</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Company Metrics</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Business Metrics Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Company Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>